# list-uniquification-starter

./: README.md
.github/workflows/: build.yml
config/: gatorgrade.yml  gatorgrader.yml
datauniquifier/: pyproject.toml
datauniquifier/datauniquifier/: analyze.py  extract.py  main.py  uniquify.py
datauniquifier/input/: data.txt
datauniquifier/tests/: test_analyze.py  test_extract.py  test_uniquify.py
writing/: reflection.md
